--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-<h1></h1>
+<h2>Using Stripe Simple Checkout</h2>
 <% if flash[:notice] %>
   <div class="notice"><%= flash[:notice] %></div>
 <% end %>
-<%= form_tag charge_path, method: :post do %>
+<%= form_tag charge_index_path, method: :post do %>
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
@@ -12,3 +12,5 @@
     data-amount="2000">
   </script>
 <% end %>
+
+<%= link_to 'See Custom', custom_url %>
